# geocoder-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  examples.ipynb  pyproject.toml  requirements.txt
notebooks/: examples.ipynb  maj_adresses_test.ipynb
src/geocoder_service/: api.py  compare.py  download.py  ingest.py  score.py  search.py  sitg_compat.py
tests/: test_adresses_20260707_152332.csv
