[project]
name = "geocoder-service"
version = "0.1.1"
description = "Geocodeur d'adresses du canton de Genève, basé sur les données ouvertes SITG (CAD_ADRESSE) et Meilisearch."
requires-python = ">=3.13"
dependencies = [
    "pyshp>=2.3.1",
    "pyproj>=3.7.0",
    "meilisearch>=0.31.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "rapidfuzz>=3.10.0",
    "httpx>=0.28.1",
    "abydos>=0.5.0",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.4.1",
    "fastexcel>=0.20.2",
    "ipykernel>=6.29.0",
    "openpyxl>=3.1.5",
    "polars>=1.42.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geocoder_service"]

[tool.bumpversion]
current_version = "0.1.1"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '^version = "{current_version}"'
replace = 'version = "{new_version}"'
